--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ button
   {
     width:100px;
     background-color:rgba(55,0,0,.9);
-    
+    box-shadow: 0px 0px 10px 10px rgba(55,55,55,.5);
    border-radius: 10px;
 
  
